# aiogram3-bot-template

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 20260312_1710_create_users.py
app/: config.py  main.py
app/bot/handlers/: __init__.py  admin.py  profile.py  registration.py  start.py
app/bot/middlewares/: db.py
app/bot/states/: registration.py
app/db/: models.py  repo.py  session.py
app/services/: __init__.py  scheduler.py  user_service.py
tests/: test_config.py  test_user_service.py
